--- a/FE/src/styles.less
+++ b/FE/src/styles.less
@@ -6486,7 +6486,7 @@ a.nav-link {
 /* -- Special Chocolate Section
 --------------------------------------------------------------*/
 .special-items{
-  background: url(src/assets/imageMain/bestsaler.png) no-repeat;
+  background: url(src/assets/imageMain/bestsaler.png) ;
 }
 .special-items .item-content {
   display: flex;
