--- a/eShopSolution/eShopSolution.AdminApp/Views/Payment/PaymentConfirm.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Payment/PaymentConfirm.cshtml
@@ -1397,7 +1397,7 @@ body.swal2-no-backdrop .swal2-shown.swal2-bottom-end,body.swal2-no-backdrop .swa
 
             </div>
             <div class="text-success">
-                @Model.ResultObj
+                @Model.Message
             </div>
             </div>
         }else{
@@ -1409,7 +1409,7 @@ body.swal2-no-backdrop .swal2-shown.swal2-bottom-end,body.swal2-no-backdrop .swa
                 </span>
             </div>
             <div class="text-danger">
-                    @Model.ResultObj
+                    @Model.Message
             </div>
            </div>
         
