--- a/eShopSolution/eShopSolution.AdminApp/Views/User/VerifyEmail.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/VerifyEmail.cshtml
@@ -70,7 +70,8 @@
                                  alt="thanks" />
                         </h1>
                         <p>
-                            for trusting us, we will get give best service to you!
+                           
+                            <small>Vui lòng quay lại trang <a href="http://localhost:4200/account">Đăng nhập</a> để tiếp tục trải nghiệm cùng EShopDrink nhé!!</small>
 
                         </p>
 
