--- a/eShopSolution/eShopSolution.AdminApp/Views/Category/Edit.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Category/Edit.cshtml
@@ -74,7 +74,7 @@
                         <label asp-for="ParentId" class="col-sm-2 col-form-label">ParentId</label>
                         <div class="col-sm-10">
                             <select asp-for="ParentId" asp-items="@ViewBag.ParentId" class="form-control">
-                                <option>None</option>
+                                <option value="0">None</option>
                             </select>
 
                         </div>
