--- a/eShopSolution/eShopSolution.AdminApp/Views/Product/Edit.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Product/Edit.cshtml
@@ -66,6 +66,14 @@
 
                         </div>
                         <div class="row mb-3">
+                            <label asp-for="OPrice" class="col-sm-2 col-form-label">Origianl Price</label>
+                            <div class="col-sm-10">
+                                <input asp-for="OPrice" type="number" class="form-control">
+                            </div>
+                            <span asp-validation-for="OPrice" class="text-danger"></span>
+
+                        </div>
+                        <div class="row mb-3">
                             <label asp-for="Stock" class="col-sm-2 col-form-label">Stock</label>
                             <div class="col-sm-10">
                                 <input asp-for="Stock" type="number" class="form-control">
