--- a/eShopSolution/eShopSolution.AdminApp/Views/Shared/Components/Navigation/Default.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Shared/Components/Navigation/Default.cshtml
@@ -7,6 +7,7 @@
   
    
     var count = localStorage.getItem('count') ?? 0;
+    var count_cmt = localStorage.getItem('count_cmt') ?? 0;
 
 </script>
 <header id="header" class="header fixed-top d-flex align-items-center">
@@ -39,13 +40,14 @@
 
             <li class="nav-item dropdown">
 
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+                <a class="nav-link hk1 nav-icon" href="#" data-bs-toggle="dropdown">
                     <i class="bi bi-bell"></i>
                     <span class="badge bg-primary badge-number">0</span>
                 </a><!-- End Notification Icon -->
 
                 <ul id="notifications" class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
                     <li class="dropdown-header">
+                        You have 0 new messages
                         <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
                     </li>
                     @foreach (var item in ViewBag.NavigationVm)
@@ -76,13 +78,13 @@
 
             <li class="nav-item dropdown">
 
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+                <a class="nav-link hk2 nav-icon" href="#" data-bs-toggle="dropdown">
                     <i class="bi bi-chat-left-text"></i>
-                    <span class="badge bg-success badge-number">3</span>
+                    <span class="badge bg-success badge-number">0</span>
                 </a><!-- End Messages Icon -->
 
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
-                    <li class="dropdown-header">
+                <ul id="notifications1" class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
+                    <li class="dropdown-header dh_1">
                         You have 3 new messages
                         <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
                     </li>
@@ -103,7 +105,7 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-
+@*
                     <li class="message-item">
                         <a href="#">
                             <img src="assets/img/messages-2.jpg" alt="" class="rounded-circle">
@@ -130,10 +132,10 @@
                     </li>
                     <li>
                         <hr class="dropdown-divider">
-                    </li>
+                    </li>*@
 
                     <li class="dropdown-footer">
-                        <a href="#">Show all messages</a>
+                        <a href="http://localhost:4200/" target="_blank">Show all messages</a>
                     </li>
 
                 </ul><!-- End Messages Dropdown Items -->
@@ -164,7 +166,7 @@
                     </li>
 
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+                        <a class="dropdown-item d-flex align-items-center" href="~/Home/Profile">
                             <i class="bi bi-person"></i>
                             <span>My Profile</span>
                         </a>
@@ -174,7 +176,7 @@
                     </li>
 
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+                        <a class="dropdown-item d-flex align-items-center" href="~/Home/Profile">
                             <i class="bi bi-gear"></i>
                             <span>Account Settings</span>
                         </a>
@@ -184,7 +186,7 @@
                     </li>
 
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
+                        <a class="dropdown-item d-flex align-items-center" href="~/Home/FAQ">
                             <i class="bi bi-question-circle"></i>
                             <span>Need Help?</span>
                         </a>
@@ -207,6 +209,8 @@
     </nav><!-- End Icons Navigation -->
     <script>      
         $(".dropdown-header").text(`You have
-                                ${count} new notifications`);
+                                ${count} new notifications`); 
+        $(".dropdown-header.dh_1").text(`You have
+                                ${count_cmt} new notifications`);
     </script>
 </header><!-- End Header -->
