--- a/eShopSolution/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
@@ -141,11 +141,11 @@
                     </li>
                     
                     <li>
-                        <a href="charts-chartjs.html">
+                        <a href="">
                             <i class="bi bi-circle"></i><span>Hóa đơn mua hàng</span>
                         </a>
                     </li>
-                    <li>
+                   @* <li>
                         <a href="charts-apexcharts.html">
                             <i class="bi bi-circle"></i><span>ApexCharts</span>
                         </a>
@@ -154,76 +154,80 @@
                         <a href="charts-echarts.html">
                             <i class="bi bi-circle"></i><span>ECharts</span>
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </li><!-- End Charts Nav -->
 
+           
+            <li class="nav-heading">Pages</li>
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-gem"></i><span>Icons</span><i class="bi bi-chevron-down ms-auto"></i>
+                <a class="nav-link collapsed" href="~/Home/Content">
+                    <i class="bi bi-gem"></i>
+                    <span>Content</span>
+                </a>
+                @* <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-gem"></i><span>Icons</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a href="icons-bootstrap.html">
-                            <i class="bi bi-circle"></i><span>Bootstrap Icons</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="icons-remix.html">
-                            <i class="bi bi-circle"></i><span>Remix Icons</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="icons-boxicons.html">
-                            <i class="bi bi-circle"></i><span>Boxicons</span>
-                        </a>
-                    </li>
-                </ul>
+                <li>
+                <a href="icons-bootstrap.html">
+                <i class="bi bi-circle"></i><span>Bootstrap Icons</span>
+                </a>
+                </li>
+                <li>
+                <a href="icons-remix.html">
+                <i class="bi bi-circle"></i><span>Remix Icons</span>
+                </a>
+                </li>
+                <li>
+                <a href="icons-boxicons.html">
+                <i class="bi bi-circle"></i><span>Boxicons</span>
+                </a>
+                </li>
+                </ul>*@
             </li><!-- End Icons Nav -->
 
-            <li class="nav-heading">Pages</li>
-
             <li class="nav-item">
-                <a class="nav-link collapsed" href="users-profile.html">
+                <a class="nav-link collapsed" href="~/Home/Profile">
                     <i class="bi bi-person"></i>
                     <span>Profile</span>
                 </a>
             </li><!-- End Profile Page Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-faq.html">
+                <a class="nav-link collapsed" href="~/Home/FAQ">
                     <i class="bi bi-question-circle"></i>
                     <span>F.A.Q</span>
                 </a>
             </li><!-- End F.A.Q Page Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-contact.html">
+                <a class="nav-link collapsed" href="~/Home/Contact">
                     <i class="bi bi-envelope"></i>
                     <span>Contact</span>
                 </a>
             </li><!-- End Contact Page Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-register.html">
+                <a class="nav-link collapsed" href="~/User/Create">
                     <i class="bi bi-card-list"></i>
                     <span>Register</span>
                 </a>
             </li><!-- End Register Page Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-login.html">
+                <a class="nav-link collapsed" href="~/Index/Login">
                     <i class="bi bi-box-arrow-in-right"></i>
                     <span>Login</span>
                 </a>
             </li><!-- End Login Page Nav -->
 
-            <li class="nav-item">
+          @*  <li class="nav-item">
                 <a class="nav-link collapsed" href="/"
                     <i class="bi bi-dash-circle"></i>
                     <span>Error 404</span>
                 </a>
-            </li><!-- End Error 404 Page Nav -->
+            </li>*@<!-- End Error 404 Page Nav -->
 
            @* <li class="nav-item">
                 <a class="nav-link collapsed" href="pages-blank.html">
@@ -294,8 +298,8 @@
             skipNegotiation: true,
             transport: signalR.HttpTransportType.WebSockets
         }).build();
-       var count = localStorage.getItem('count') || 0; // Retrieve count from localStorage, or set it to 0 if not found
-
+        var count = localStorage.getItem('count') || 0; // Retrieve count from localStorage, or set it to 0 if not found
+        var count_cmt = localStorage.getItem('count_cmt') || 0;
         connection.on("OrderCheckOut", (message) => {
             
             count = parseInt(count) + 1; // Increment count
@@ -304,26 +308,61 @@
                         ${count} new notifications`);
             localStorage.setItem('count', count); // Save updated count to localStorage
 
-            var { userName, orderDate, ...rest } = message;
+            let { userName, orderDate, ...rest } = message;
             $('#notifications li.notification-item:first').remove();
 
-            var html = `<li class="notification-item">
+            let html = `
+                        <li class="notification-item">
                                     <i class="bi bi-cart-check-fill text-success"></i>
                                     <div>
                                                 <h4>${userName}</h4>
                                         <p>Have checkout their cart</p>
                                                 <p>At ${orderDate}</p>
                                     </div>
-                                </li>`
-            var fourthItem = $('#notifications li.notification-item:eq(0)');
+                                        </li> <li>
+                                <hr class="dropdown-divider">
+                            </li>`
+            let fourthItem = $('#notifications li.notification-item:eq(0)');
+
             fourthItem.before(html);
 
             statisticByDateTime();
             pieChart();
             reportChart();
+            userOrder();
+            productOrder();
 
         });
+        connection.on("CommentMessage", (message) => {
+            count_cmt = parseInt(count_cmt) + 1; // Increment count
 
+            $(".bg-success.badge-number").text(count_cmt);
+            $(".dropdown-header.dh_1").text(`You have
+                        ${count_cmt} new notifications`);
+            localStorage.setItem('count_cmt', count_cmt); // Save updated count to localStorage
+
+            let { commentText, userId, createdDate, productId, ...rest } = message;
+
+            $('#notifications1 li.notification-item:first').remove();
+
+            let html = ` <li class="message-item">
+                                    <a href="http://localhost:4200/detail-product;id=${productId}" target="_blank">
+                                    <img src="assets/img/logo.jpg" alt="" class="rounded-circle">
+                                    <div>
+                                        <h4>${userId}</h4>
+                                        <p>${commentText}</p>
+                                        <p>${createdDate}</p>
+                                    </div>
+                                </a>
+                                    </li> <li>
+                                <hr class="dropdown-divider">
+                            </li>`;
+
+            let fourthItem = $('#notifications1 li.message-item:eq(0)');
+            console.log(fourthItem)
+
+            fourthItem.before(html);
+        });
         // Start the connection
         connection
             .start()
@@ -336,9 +375,16 @@
                 );
             });
         // Remove count notifications
-        $(".nav-link").click(function (e) {
+        $(".nav-link.hk1").click(function (e) {
             $(".badge.bg-primary").text("0");
             localStorage.removeItem('count');
+
+        })
+        $(".nav-link.hk2").click(function (e) {
+            $(".bg-success.badge-number").text("0");
+            localStorage.removeItem('count_cmt');
+            console.log(123)
+
 
         })
                     // Other SignalR code goes here
