upload to IIS server

--- a/eShopSolution/eShopSolution.AdminApp/Views/Payment/PaymentConfirm.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Payment/PaymentConfirm.cshtml
@@ -1415,6 +1415,11 @@ body.swal2-no-backdrop .swal2-shown.swal2-bottom-end,body.swal2-no-backdrop .swa
         
         }
     
-       
+       <script>
+        setTimeout(function () {
+            window.close();
+        }, 5000);
+
+       </script>
     </body>
 </html>
