--- a/eShopSolution/eShopSolution.AdminApp/Views/Product/AddImage.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Product/AddImage.cshtml
@@ -5,7 +5,7 @@
 }
 
     <div class="container-fluid">
-        <h1 class="mt-4">Tạo mới sản phẩm</h1>
+        <h1 class="mt-4">Tạo mới hình ảnh</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
             <li class="breadcrumb-item">Danh sách sản phẩm</li>
