--- a/eShopSolution/eShopSolution.AdminApp/Views/User/VerifyEmail.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/VerifyEmail.cshtml
@@ -71,7 +71,7 @@
                         </h1>
                         <p>
                            
-                            <small>Vui lòng quay lại trang <a href="http://localhost:4200/account">Đăng nhập</a> để tiếp tục trải nghiệm cùng EShopDrink nhé!!</small>
+                            <small>Vui lòng quay lại trang <a style="border-radius: 20px"st href="http://localhost:4200/account">Đăng nhập</a> để tiếp tục trải nghiệm cùng EShopDrink nhé!!</small>
 
                         </p>
 
